editing layout, added authors, etc.

--- a/writers.html
+++ b/writers.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Staff
+title: "contributors"
 ---
-<h1>Staff</h1>
+
+<h1>Contributors</h1>
 
 <ul>
   {% for author in site.authors %}
